bynkc/tests/fixtures/negative/333_traverse_try_non_result/input.bynk
commons demo.ttnr
fn plain(x: Int) -> Effect[Int] { Effect.pure(x) }
fn bad(xs: List[Int]) -> Effect[Result[List[Int], String]] {
  xs.traverseTry((x: Int) => plain(x))
}
